--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <form id="formId">
+        <p>Test登录页面</p>
         <p><input id="userNameId" name="userName"></input></p>
     </form>
     <input type="button" value="提交" id="submit"></input>
